--- a/content/post/2019-10-26-líkan-af-íbúðarhúsnæði-á-höfuðborgarsvæðinu.Rmd
+++ b/content/post/2019-10-26-líkan-af-íbúðarhúsnæði-á-höfuðborgarsvæðinu.Rmd
@@ -42,7 +42,7 @@ Gögnin sem ég nota eru fengin úr nokkrum áttum. Allt eru þetta mánaðarleg
 Fyrsta myndin sýnir þróun þeirra sex breyta sem ég mun styðjast við. Gífurleg hækkun fasteignaverðs átti sér stað frá lok árs 2004 þegar bæði hámars hlutfall hækkaði úr 65% í 100% á 2-3 mánuðum og vextir fasteignalána voru lækkaðir.
 
 ```{r, fig.height=6}
-gogn <- readxl::read_excel("./content/post/data/likan_af_ibudarverdi_data.xlsx")
+gogn <- readxl::read_excel("C:/Users/vidar/Documents/Rwd/blog/content/post/data/likan_af_ibudarverdi_data.xlsx")
 gogn$date <- as.Date(gogn$date)
 
 gogn_graph <- gogn %>% 
@@ -171,14 +171,14 @@ summary(ca.jo(as.matrix(gogn_2[,-1]),
       season = 12))
 
 # Constant term in cointegration
-summary(ca.jo(as.matrix(price_rent_coint[,-1]),
+summary(ca.jo(as.matrix(gogn_2[,-1]),
       type = "eigen",
       ecdet = "const",
       K = 4,
       season = 12))
 
 # Trend term in cointegration
-summary(ca.jo(as.matrix(price_rent_coint[,-1]),
+summary(ca.jo(as.matrix(gogn_2[,-1]),
       type = "eigen",
       ecdet = "trend",
       K = 4,
