--- a/content/post/2019-10-26-líkan-af-íbúðarhúsnæði-á-höfuðborgarsvæðinu.Rmd
+++ b/content/post/2019-10-26-líkan-af-íbúðarhúsnæði-á-höfuðborgarsvæðinu.Rmd
@@ -37,7 +37,8 @@ library(caret)
 
 ```
 
-Fyrir stuttu síðan tók ég saman gögn um hámarkshlutfall sem íslenskar fjármálastofnanir lána til fasteignakaupa. Ég hafði áhuga á því að skoða þetta hlutfall í samhengi við hækkun fasteignaverðs á höfuðborgarsvæðinu. Að neðan mun ég skoða gögnin með myndrænum hætti auk þess sem ég met VAR (og VEC líkan ef það hentar) til að varpa ljósi á áhrif hámarks lánshlutfalls á þróun fasteignaverðs.
+Fyrir stuttu síðan tók ég saman gögn um hámarkshlutfall sem íslenskar fjármálastofnanir lána til fasteignakaupa. Það eru eflaust fáir hagfræðingarnir sem telja hærra lánshlutfall ekki leiða til hækkun fasteignaverðs. Hér mun ég skoða hvaða áhrif hærra lánshlutfall hefur á fasteignaverð. Því er mögulega hægt að svara með hefðbundnum tölfræðilíkönum á borð við VAR eða VEC líkön. Sökum þess hve sjaldan hámarkshlutfall breytist á tímabilinu 1994 - 2019 er ekki ólíklegt að hefðbundin línuleg líkön eigi erfitt með að pikka upp áhrifin.
+Í stað þess að láta þar við sitja verður einnig stuðst við algorithma vélarnsáms (e. machine learning algorithm). Tree-based líkön á borð við random forest gætu til dæmis komið að gagni.
 
 
 ## Gögn
@@ -45,7 +46,7 @@ Gögnin sem ég nota eru fengin úr ólíkum áttum. Allt eru þetta mánaðarle
 
 
 ## Grafísk greining
-Fyrsta myndin sýnir þróun þeirra sex breyta sem ég mun styðjast við. Gífurleg hækkun fasteignaverðs átti sér stað frá lok árs 2004 þegar bæði hámars hlutfall hækkaði úr 65% í 100% á 2-3 mánuðum og vextir fasteignalána voru lækkaðir.
+Fyrsta myndin sýnir þróun þeirra sex breyta sem ég mun styðjast við. Gífurleg hækkun fasteignaverðs átti sér stað frá lok árs 2004 þegar bæði hámars hlutfall hækkaði úr 65% í 100% á 2-3 mánuðum og vextir fasteignalána lækkuðu umtalsvert. 
 
 ```{r, fig.height=6}
 gogn <- readxl::read_excel("C:/Users/vidar/Documents/Rwd/blog/content/post/data/likan_af_ibudarverdi_data.xlsx")
@@ -59,16 +60,21 @@ gogn$utborgad <- as.numeric(seas_utb$data[,4])
 
 
 gogn_graph <- gogn %>% 
-  mutate(hus_12m_br = ibudarhus/lag(ibudarhus, 12) - 1,
-         leiga_12m_br = greidd_husaleiga/lag(greidd_husaleiga, 12) - 1,
-         utborgad_12m_br = utborgad/lag(utborgad, 12) - 1,
-         utlan_12m_br = utlan_heimila/lag(utlan_heimila, 12) - 1) %>% 
-  dplyr::select(date, hus_12m_br, leiga_12m_br, utborgad_12m_br, utlan_12m_br, laegstu_vextir, max_hlutfall) %>% 
-  na.omit()
+  transmute("12m hækkun fasteignaverðs" = ibudarhus/lag(ibudarhus, 12) - 1,
+            "12m hækkun leigu" = greidd_husaleiga/lag(greidd_husaleiga, 12) - 1,
+            "12m breyting launa" = utborgad/lag(utborgad, 12) - 1,
+            "12m breyting skulda" = utlan_heimila/lag(utlan_heimila, 12) - 1)
+
+gogn_graph$date <- gogn$date
+gogn_graph$max_hlutfall <- gogn$max_hlutfall
+gogn_graph$laegstu_vextir <- gogn$laegstu_vextir
+gogn_graph <- gogn_graph %>% dplyr::select(date, everything())
+
+gogn_graph <- gogn_graph %>% na.omit()
 
 gogn_graph %>% 
   mutate("Hlutfall" = ifelse(max_hlutfall >= .9, "90% eða hærra", "Undir 90%")) %>% 
-  pivot_longer(cols = hus_12m_br:max_hlutfall,
+  pivot_longer(cols = 2:7,
                names_to = "variable",
                values_to = "value") %>% 
   ggplot(aes(x = date,
@@ -79,15 +85,17 @@ gogn_graph %>%
   facet_wrap(~ variable,
              ncol = 3,
              scales = "free_y") + 
-  scale_color_tableau()
+  scale_color_tableau() + 
+  labs(x = NULL, y = NULL) + 
+  scale_y_continuous(labels = scales::percent)
 
 ```
 
 
-Næst sýni ég dreifingu eftir hámarks lánshlutfalli. Hér mætti einnig skoða meðallánshlutfall sem lánastofnanir buðu. Ég ákvað þó að fara þá leið í þessari greiningu að nota hæsta hlutfallið sem var í boði á hverjum tíma.  
-Ég er almennt ekki hlynntur því að birta gröf sem sýnir samband tveggja breyta þegar vitað er að aðrar breytur kunna að hafa áhrif. Ástæðan er sú að það er auðvelt að sýna jákvætt samband milli tveggja breyta en sambandið hverfur eða jafnvel breytir um formerki við það eitt að taka tillit til þriðju breytunnar. Hér geri ég þó undantekningu með því að sýna samband milli tólf mánaða hækkun fasteignaverðs og hámarks hlutfalls með þeim fyrirvörum að þetta kunni að breytast eftir að tekið er tillit til annarra breyta.    
+Næst sýni ég dreifingu eftir hámarks lánshlutfalli. Hér mætti einnig skoða meðallánshlutfall sem lánastofnanir buðu. Ég ákvað þó að fara þá leið í þessari greiningu að nota hæsta hlutfallið sem var í boði á hverjum tíma. Munurinn á hámarkshlutfalli og meðalhlutfalli (banka, lífeyrissjóða og íLS) er lítill.  
+Ég er almennt ekki hlynntur því að birta gröf sem sýnir samband tveggja breyta þegar vitað er að aðrar breytur kunna að hafa áhrif. Ástæðan er sú að það er auðvelt að sýna jákvætt samband milli tveggja breyta en sambandið hverfur eða jafnvel breytir um formerki við það eitt að taka tillit til þriðju breytunnar. Hér geri ég þó undantekningu með því að sýna hversu mikið fasteignaverð hefur hækkað á mismunandi tímum eftir því hvert hámarkslánshlutfall var.  
 
-Neðangreint graf kallst box-plot. Box plot samanstendur af *hinges* og *whiskers*. Hinges eru efri og neðri mörk kassans. Efri mörkin eru efri fjórðungsmörk og neðri mörkin eru neðri fjórðungsmörk. Neðri fjórðungsmörk eru skilgreind á þann hátt að 25% gildanna (tólf mánað breyting í þessu dæmi) eru undir neðri fjórðungsmörkum. Á sama hátt eru 25% gildanna yfir efri fjórðungsmörkunum.   
+Neðangreint graf kallst box-plot. Box plot samanstendur af *hinges* og *whiskers*. Hinges eru efri og neðri mörk kassans. Efri mörkin eru efri fjórðungsmörk og neðri mörkin eru neðri fjórðungsmörk. Neðri fjórðungsmörk eru skilgreind á þann hátt að 25% gildanna (tólf mánað breyting fasteignaverð í þessu dæmi) eru undir neðri fjórðungsmörkum. Á sama hátt eru 25% gildanna yfir efri fjórðungsmörkunum.   
 Whiskers eru lóðréttu strikin sem koma upp úr og niður úr boxinu. Efra stirkið nær frá efir mörkum boxins upp í hæsta gildið þó aldrei hærra en 1.5 x IQR, sama á við um neðra strikið. Gildi sem fara út fyrir *whiskers* kallst útlagar.  
 (IQR: inter quartile range eða bil milli efri og neðri marka boxins).
 
@@ -99,7 +107,7 @@ gogn_graph$max_hlutfall_fct <- factor(scales::percent(gogn_graph$max_hlutfall),
 
 ggplot(gogn_graph,
        aes(x = max_hlutfall_fct,
-           y = hus_12m_br,
+           y = `12m hækkun fasteignaverðs`,
            fill = max_hlutfall_fct,
            col = max_hlutfall_fct)) +
     scale_fill_tableau() + 
@@ -115,7 +123,7 @@ ggplot(gogn_graph,
 
 ```
 
-Út frá myndunum að ofan er hægt að draga þá ályktun að þegar lánshlutfall er hærra, þá er tólf mánaða hækkun fasteignaverðs hærri.  
+Út frá myndunum að ofan er hægt að draga þá ályktun að þegar lánshlutfall er hærra, þá er tólf mánaða hækkun fasteignaverðs hærri. Í það minnsta hefur fasteignaverð á höfuðborgarsvæðinu aldrei hækkað meira en 25% nema þegar hámarkslánshlutfallið var 100%.  
 
 Gröf ein og sér svara því þó ekki fyllilega hver áhrif hærra lánshlutfalls er á fasteignaverðs. Til að fá betra svar sný ég mér að tölfræðilíkönum.
 
@@ -161,23 +169,25 @@ ggplot(price_rent,
 ```
 
 
-Hér verður kannað hvort samþættingarsamband sé á milli fasteignaverðs, leigu og launa. Ef svo er þá er hentugar að styðjast við VEC líkan en VAR. Fyrst þarf að velja fjölda tafinna gilda. Það geri ég með `VARselect`. AIC, HQ, SC og FPE gefa öll misjafna niðurstöðu. Sagt er að AIC eigi það til að velja of mörg tafin gildi. HQ og BIC/SC virðast velja mjög fá tafin gildi, 1. Til að kanna hvort það sé samþættingarsamband þá þarf ég að nota í það minnsta tvö tafin gildi. Styðst því við AIC hér sem segir að fjögur tafin gildi séu heppilegasta lag length. Taflan að neðan sýnir fjölda tafinna gilda m.v. mismunandi criteríur og hvort ég noti constant, trend eða bæði. Þar sem ég er með þrjár breytur sem hækka yfir tíma þá tel ég heppilegast að hafa trend auk þess sem ég tel eðlilegast að hafa einnig constnat. Þannig að **both** dálkurinn er sá sem ég mun líta til.  
+Hér verður kannað hvort samþættingarsamband sé á milli fasteignaverðs, leigu og launa. Ef svo er þá er hentugar að styðjast við VEC líkan en VAR, í það minnsta fyrir greiningu sem nær til langs tíma. Fyrst þarf að velja fjölda tafinna gilda. Það geri ég með `VARselect`. AIC, HQ, SC og FPE gefa öll misjafna niðurstöðu. Sagt er að AIC eigi það til að velja of mörg tafin gildi. HQ og BIC/SC virðast velja mjög fá tafin gildi, 1. Til að kanna hvort það sé samþættingarsamband þá þarf ég að nota í það minnsta tvö tafin gildi. Styðst því við AIC/FPE hér sem segir að fjögur tafin gildi séu heppilegasta lag length. Taflan að neðan sýnir fjölda tafinna gilda m.v. mismunandi criteríur og hvort ég noti constant, trend eða bæði. Þar sem ég er með þrjár breytur sem hækka yfir tíma þá tel ég heppilegast að hafa trend auk þess sem ég tel eðlilegast að hafa einnig constnat. Þannig að **both** dálkurinn er sá sem ég mun líta til.  
 
-```{r elastic}
+Til að nota `VARSelect` fallið í **vars** pakkanum þarf að velja hæsta fjölda tafinna gilda sem verða prófuð. Ef ég nota lax.max = 12, þ.e. prófa VAR(1), VAR(2), ..., VAR(12) þá er besta líkanið (m.v. AIC og FPE) það sem hefur fjögur tafin gildi. Ef ég hins vegar set lax.max = 24 þá prófa ég alveg upp í VAR(24) en þá velja AIC, HQ og FPE 24 tafin gildi. Þetta er vandamál sem eflaust má rekja til þess að gagnasettið er ekki sérlega stórt. Sjá umfjöllund [hér](https://stats.stackexchange.com/questions/399772/aic-bic-values-keep-changing-with-lag-max-in-var-model). Ég nota lag.max = 12 hér að neðan.   
+
+```{r gogn_2, echo=TRUE}
 
 gogn_2 <- gogn %>% 
   mutate(d_debt = utlan_heimila/lag(utlan_heimila, 12) - 1,
          log_price = log(ibudarhus),
          log_leiga = log(greidd_husaleiga),
          log_laun = log(utborgad)) %>% 
-  dplyr::select(-c(ibudarhus, greidd_husaleiga, utborgad, utlan_heimila)) %>% 
-  na.omit() %>% head(-24)
+  dplyr::select(-c(ibudarhus, greidd_husaleiga, utborgad, utlan_heimila, avg_hlutfall)) %>% 
+  na.omit()
 
 ```
 
 
 
-```{r}
+```{r, echo=TRUE}
 
 
 lag_max <- 12
@@ -197,7 +207,11 @@ lag_result %>%
 
 ```
 
-Eftir að hafa valið fjölda tafinna gilda þá get ég framkvæmt Johansen próf til að kanna hvort samþættingarsamband sé til staðar. Óháð því hvort ég nota *intercept*, *trend* eða hvorugt þá er alltaf sama niðursatða eða tvö samþættingarsambönd.  
+
+Eftir að hafa valið fjölda tafinna gilda þá get ég framkvæmt Johansen próf til að kanna hvort samþættingarsamband sé til staðar. Óháð því hvort ég nota *intercept*, *trend* eða hvorugt þá er alltaf sama niðursatða, þ.e. tvö samþættingarsambönd. Til að svar því hversu mörg samþættingarsambönd eru þá er lesið úr efstu töflunum sem birtast í þessum þremur output-um að neðan. Í fyrsta output-inu má sjá r = 0, r <= 1, ... r <= 6. Þarna er verið að kanna hversu mörg samþættingarsambönd eru til staðar. Ég er almennt ekki mikill aðdáandi þess að velja 5% marktæknistig (e. significance level) bara af því að það er "hefð" í hagfræðinni. Í fyrsta output-inu að neðan er ekki hægt að hafna tilgátunni um tvö samþættingarsambönd við 5% marktæknistig en það er hægt m.v. 10%. 
+
+M.v. 5% marktæknistig (5pct) þá er test statistic hærra fyrir r = 0 (test = 167.03 vs. 5pct = 124.25). Svona höldum við áfram upp töfluna þangað til við getum ekki hafnað H0. Þegar r <= 1 þá getum við ekki hafnað tilgátunni um eitt eða færri samþættingarsambönd, næ því hins vegar m.v. 10% marktæknistig. Ef við lesum eins út úr hinum tveimur töflunum þá fæst sú niðurstaða að tvö samþættingarsambönd séu til staðar.  
+
 
 ```{r, echo=TRUE}
 
@@ -227,6 +241,8 @@ summary(ca.jo(as.matrix(gogn_2[,-1]),
 
 # VEC líkan
 
+Fyrir ykkur sem slepptuð ítarefninu þá var niðurstaðan sú að vegna langtímasambands á milli launa og fasteignaverðs og leigu og fasteignaverðs þá væri best að styðjast við VEC líkan.  
+
 ```{r, vec}
 
 # gogn_2 <- gogn_2 %>% 
@@ -237,15 +253,69 @@ coint_test <- ca.jo(as.matrix(gogn_2[,-1]),
       ecdet = "trend",
       K = 4)
 
-vec_likan <- cajools(coint_test)
+# vec_likan <- cajools(coint_test)
+# 
+# vec_likan <- VECM(data = gogn_2[,-1],
+#                   lag = 4,
+#                   r = 2,
+#                   include = "trend")
 
-vec_likan <- VECM(data = gogn_2[,-1],
-                  lag = 4,
-                  r = 2,
-                  include = "const")
+var_from_vec <- vec2var(coint_test, r = 2)
 
-vec_irf <- tsDyn::irf(vec_likan, n.ahead = 24, cumulative = TRUE)
-plot(vec_irf)
+n_ahead <- 24
+
+vec_irf <- tsDyn::irf(var_from_vec, n.ahead = n_ahead, ci = 0.8)
+# plot(vec_irf)
+
+
+```
+
+Gröfin að neðan sýna viðbragð fasteignaverðs á höfuðborgarsvæðinu vegna skells (e. shock) í fimm breytum. Bláa svæðið í kringum viðbragðsfallið er 80% öryggisbil. Ég hallast að 
+
+```{r vec_irf_plot}
+
+irf_func <- function(var_num) {
+  df_irf <- tibble(period = 1:(n_ahead + 1),
+                   low = vec_irf$Lower[[var_num]][, 4],
+                   up = vec_irf$Upper[[var_num]][, 4],
+                   m = vec_irf$irf[[var_num]][, 4])
+  return(df_irf)
+}
+
+# responce of price to max_hlutfall
+irf_var1 <- irf_func(1)
+
+# responce of price to laegstu_vextir
+irf_var2 <- irf_func(2)
+  
+# responce of price to d_debt
+irf_var3 <- irf_func(3)
+
+# response of price to leiga
+irf_var4 <- irf_func(5)
+
+# response of price to laun
+irf_var5 <- irf_func(6)
+
+
+irf_plot <- function(df) {
+  ggplot(df,
+             aes(x = period, y = m, ymin = low, ymax = up)) + 
+  geom_ribbon(fill = "dodgerblue", alpha = 0.5) +
+  geom_line(col = "midnightblue", lwd = 1) + 
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  labs(y = NULL, x = NULL)
+}
+
+
+p1 <- irf_plot(irf_var1) + labs(subtitle = "Hámarks lánshlutfall")
+p2 <- irf_plot(irf_var2) + labs(subtitle = "Vextir")
+p3 <- irf_plot(irf_var3) + labs(subtitle = "Breyting í skuldum")
+p4 <- irf_plot(irf_var4) + labs(subtitle = "Leiga")
+p5 <- irf_plot(irf_var5) + labs(subtitle = "Laun")
+
+gridExtra::grid.arrange(p1, p2, p3, p4, p5, ncol = 2, top = "Viðbragðsföll fyrir fasteignaverð")
+
 
 ```
 
@@ -256,14 +326,14 @@ plot(vec_irf)
 ```{r}
 horizon <- 24
 lookback <- 120
-vec_pred <- predict(vec_likan, n.ahead = horizon)
+vec_pred <- predict(var_from_vec, n.ahead = horizon)
 
 new_date <- seq.Date(from = as.Date("2019-08-01"),
                      length.out = horizon,
                      by = "month")
 
 df_pred <- tibble(date = c(tail(gogn_2$date, lookback), new_date),
-                  price = c(exp(tail(gogn_2$log_price, lookback)), exp(vec_pred[,4])),
+                  price = c(exp(tail(gogn_2$log_price, lookback)), exp(vec_pred$fcst$log_price[,1])),
                   what = c(rep("raun", lookback), rep("spa", horizon)))
 
 
@@ -271,7 +341,8 @@ ggplot(df_pred,
        aes(x = date,
            y = price,
            col = what)) + 
-  geom_path()
+  geom_path() + 
+  labs(x = NULL, y = NULL, title = "Spá 24 mánuði")
 
 ```
 
@@ -287,19 +358,19 @@ ggplot(df_pred,
 #   dplyr::select(date, d_house, d_utlan, max_hlutfall, laegstu_vextir) %>%
 #   na.omit()
 
-var_gogn <- gogn_2
-
-ts_house <- ts(var_gogn$log_price, frequency = 12, start = c(1998, 12))
-ts_utlan <- ts(var_gogn$d_debt, frequency = 12, start = c(1998, 12))
-ts_hlutfall <- ts(var_gogn$max_hlutfall, frequency = 12, start = c(1998, 12))
-ts_vextir <- ts(var_gogn$laegstu_vextir, frequency = 12, start = c(1998, 12))
-ts_leiga <- ts(var_gogn$log_leiga, frequency = 12, start = c(1998, 12))
-ts_laun <- ts(var_gogn$log_laun, frequency = 12, start = c(1998,12))
-
-ts_data <- ts.union(ts_house,
-                    ts_utlan,
-                    ts_hlutfall,
-                    ts_vextir)
+# var_gogn <- gogn_2
+# 
+# ts_house <- ts(var_gogn$log_price, frequency = 12, start = c(1998, 12))
+# ts_utlan <- ts(var_gogn$d_debt, frequency = 12, start = c(1998, 12))
+# ts_hlutfall <- ts(var_gogn$max_hlutfall, frequency = 12, start = c(1998, 12))
+# ts_vextir <- ts(var_gogn$laegstu_vextir, frequency = 12, start = c(1998, 12))
+# ts_leiga <- ts(var_gogn$log_leiga, frequency = 12, start = c(1998, 12))
+# ts_laun <- ts(var_gogn$log_laun, frequency = 12, start = c(1998,12))
+# 
+# ts_data <- ts.union(ts_house,
+#                     ts_utlan,
+#                     ts_hlutfall,
+#                     ts_vextir)
 
 # VARselect(ts_data, lag.max = 48, type = c("const"))$select
 # 
@@ -313,41 +384,41 @@ ts_data <- ts.union(ts_house,
 
 ```{r}
 
-train_data <- window(ts_data, end = c(2014, 6))
-
-VARselect(train_data, lag.max = 48, type = c("const"))$select
-var1 <- VAR(train_data, p = 12, type = "const")
-
-
-horizon <- 12
-lookback <- 120
-var_pred <- predict(var1, n.ahead = horizon)
-var_pred_house <- var_pred$fcst$ts_house[,1]
-
-
-fra_date <- as.Date(time(tail(train_data, 1))) + months(1)
-
-new_date <- seq.Date(from = as.Date(fra_date),
-                     length.out = horizon,
-                     by = "month")
-
-raun_price <- head(window(ts_data, start = c(2014, 7)), horizon)[, 1]
-
-df_pred_var <- tibble(date = c(as.Date(time(tail(train_data, lookback))), new_date),
-                  spa = c(tail(train_data[,1], lookback), var_pred_house),
-                  raun = c(tail(train_data[,1], lookback), raun_price),
-                  what = c(rep("raun", lookback), rep("spa", horizon))) %>% 
-  pivot_longer(cols = c(spa, raun),
-               names_to = "key",
-               values_to = "value")
-
-
-ggplot(df_pred_var,
-                aes(x = date,
-                    y = value,
-                    col = key)) + 
-  geom_line()
-
+# train_data <- window(ts_data, end = c(2014, 6))
+# 
+# VARselect(train_data, lag.max = 48, type = c("const"))$select
+# var1 <- VAR(train_data, p = 12, type = "const")
+# 
+# 
+# horizon <- 12
+# lookback <- 120
+# var_pred <- predict(var1, n.ahead = horizon)
+# var_pred_house <- var_pred$fcst$ts_house[,1]
+# 
+# 
+# fra_date <- as.Date(time(tail(train_data, 1))) + months(1)
+# 
+# new_date <- seq.Date(from = as.Date(fra_date),
+#                      length.out = horizon,
+#                      by = "month")
+# 
+# raun_price <- head(window(ts_data, start = c(2014, 7)), horizon)[, 1]
+# 
+# df_pred_var <- tibble(date = c(as.Date(time(tail(train_data, lookback))), new_date),
+#                   spa = c(tail(train_data[,1], lookback), var_pred_house),
+#                   raun = c(tail(train_data[,1], lookback), raun_price),
+#                   what = c(rep("raun", lookback), rep("spa", horizon))) %>% 
+#   pivot_longer(cols = c(spa, raun),
+#                names_to = "key",
+#                values_to = "value")
+# 
+# 
+# ggplot(df_pred_var,
+#                 aes(x = date,
+#                     y = value,
+#                     col = key)) + 
+#   geom_line()
+# 
 
 ```
 
